mutants.out/log/src__proto__utils.rs_line_31_col_5.log

*** src/proto/utils.rs:31:5: replace parse_provided_or_from_env -> Result<Url, Error> with Ok(Default::default())

*** mutation diff:
--- src/proto/utils.rs
+++ replace parse_provided_or_from_env -> Result<Url, Error> with Ok(Default::default())
@@ -23,17 +23,17 @@
     if url.host_str().is_none() || url.host_str().unwrap().is_empty() {
         return Err(error::Connect::MissingHostname.into());
     }
 
     Ok(url)
 }
 
 pub(crate) fn parse_provided_or_from_env(url: Option<&str>) -> Result<Url, Error> {
-    url_parse(url.unwrap_or(&get_env_url()))
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 #[cfg(test)]
 mod tests {
     use super::*;
 
     #[test]
     fn correct_env_parsing() {


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `Url: Default` is not satisfied
  --> src/proto/utils.rs:31:8
   |
31 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   |        ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Url`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
